<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.onehop.android.register.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edt_activity_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/register_prompt_email"/>

        <EditText
            android:id="@+id/edt_activity_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_prompt_password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/default_material_padding"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_below="@id/edt_activity_register_email"/>

        <Button
            android:id="@+id/btn_activity_register_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_default"
            android:textSize="@dimen/subhead"
            android:textColor="@color/textLightPrimary"
            android:text="@string/login_action_register"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_below="@id/edt_activity_register_password"/>

    </RelativeLayout>

</FrameLayout>
